# croppy

./: .last_build_id  flutter_bootstrap.js  flutter_service_worker.js  main.dart.js
android/: build.gradle
assets/: NOTICES
example/android/app/: build.gradle
example/lib/: localization_override_example.dart  main.dart
lib/src/l10n/languages/: croppy_en.dart
lib/src/pages/: cupertino_pages.dart  material_pages.dart
lib/src/widgets/cupertino/: cupertino_image_cropper_app_bar.dart  cupertino_image_cropper_bottom_app_bar.dart  cupertino_image_cropper_page.dart
lib/src/widgets/cupertino/toolbar/: cupertino_rotation_slider.dart
lib/src/widgets/material/: material_image_cropper_bottom_app_bar.dart  material_image_cropper_page.dart
lib/src/widgets/material/toolbar/: material_image_cropper_toolbar.dart  material_rotation_slider.dart
src/: CMakeLists.txt
